--- a/angularDirectives/formField.html
+++ b/angularDirectives/formField.html
@@ -109,6 +109,27 @@
             </div>
          </div>
 
+
+         <div ng-switch-when="duration">
+           <div class="form-group row" ng-if="model[fieldname]">
+            <label class="control-label col-xs-4">{{ field.label }}</label>
+            <div class="col-xs-5">
+              <input type="text" ng-model="model[fieldname]" class="form-control" ng-change="onChange()">
+            </div>
+            <div class="col-xs-3">
+              <button class="btn btn-danger" ng-click="clear()" ng-i18next="commonFramework:none"></button>
+            </div>
+           </div>
+           <div class="form-group row" ng-if="!model[fieldname]">
+            <span class="control-label col-xs-4">{{field.label}}</span>
+            <div class="checkboxSwitch col-xs-8">
+              <input type="checkbox" id="toggle_sDuration" class="switch" ng-click="model[fieldname]='00:45:00'">
+              <label for="toggle_sDuration"><span></span></label>
+            </div>
+           </div>
+         </div>
+
+
          <div ng-switch-when="enum" class="form-group row">
             <label class="control-label col-xs-4">{{ field.label }} :</label>
             <div class="col-xs-8">
